<resources>
    <string name="app_name">SportsApp</string>
    <string name="title_home">Home</string>
    <string name="title_exercises">Exercises</string>
    <string name="exercises_fragment_text">EXERCISES</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_map">Map</string>
    <string name="chest_button_text">Chest</string>
    <string name="title_training">Training</string>
    <string name="stopwatch_start_time">00:00:00</string>
    <string name="current_results">Текущие результаты:</string>
    <string name="start_training">Начать тренировку</string>
    <string name="home_button_text">Перейти к тренировке</string>
    <string name="add_exercise">Добавить упражнение</string>
    <string name="timer_title_text">Таймер</string>
    <string name="timer_text">00:00</string>
    <string name="start_timer_button_text">Запустить таймер</string>
</resources>